# mathlib

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  README.rst  changelog.md  cookbook.toml  cookbook.yaml  make.toml  makefile  mkdocs.yml  mypy.ini  pyproject.toml  readme.md
.github/workflows/: test.yml  tests.yml
docs/: CHANGELOG.md  README.md  installation.md  usage.md
docs/source/: conf.py  installation.rst  usage.rst
src/mathlib/: __version__.py  _seven.py  _seven.pyi  general.py  numbers.py  physics.py  primes.py
src/mathlib/lib/: exceptions.py
tests/mathlib/: test_general.py  test_numbers.py  test_physics.py  test_primes.py  test_version.py
