[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38"]

[tool.poetry]
name = "mathlib"
version = "0.1.3"
description = "A pure-python maths library"
authors = ["spapanik <spapanik21@gmail.com>"]

license = "LGPLv3"
readme = "README.md"
include = ["CHANGELOG.md"]

repository = "https://github.com/spapanik/mathlib"

keywords = ["mathematics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "*", allows-prereleases = true}
isort = "^4.3"

pytest = "^5.1"
pytest-cov = "^2.8"
coveralls = "^1.8"

ipython = "^7.8"
ipdb = "^0.12"
