[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38", "py39"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_tests = "tests"
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "TESTS"]

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = "tests"

[tool.poetry]
name = "mathlib"
version = "0.2.0"
description = "A pure-python maths library"
authors = [
    "Stephanos Kuma <stephanos@kuma.ai>",
]

license = "LGPL-3.0+"
readme = "README.md"
include = ["CHANGELOG.md"]

repository = "https://github.com/spapanik/mathlib"

keywords = ["mathematics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
mypy = "^0.812"

pytest = "^6.2.0"

ipython = [
    {version = "^7.16.0", python = "~3.6.0"},
    {version = "^7.23.0", python = "^3.7.0"},
]
ipdb = "^0.13.0"

flake8 = "^3.9.0"
flake8-bugbear = "^21.4.0"
flake8-builtins = "^1.5.0"
flake8-comprehensions = "^3.5.0"
flake8-eradicate = "^1.0.0"
flake8-executable = "^2.1.0"
flake8-mutable = "^1.2.0"
flake8-tidy-imports = "^4.3.0"
